# flotta

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
scripts/: e2e_lifecycle.py
src/flotta/: __init__.py  cli.py  provision.py  store.py  test_cli.py  test_provision.py  test_store.py
src/flotta/worker/: __init__.py  config.py  entrypoint.py  image.py  modal_app.py  server.py  test_config.py  test_server.py
