[project]
name = "flotta"
version = "0.0.1"
description = "Open-source fleet runtime for self-improving agents"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
# `modal` is the client for the runtime itself — provisioning, the CLI (M4) and
# the e2e script cannot work without it, so it is a real runtime dependency.
# The heavy worker stack (Hermes, the MCP SDK, uvicorn) stays image-only and
# lazily imported, which is the part D9 actually protects.
dependencies = [
    "modal>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flotta"]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
